<resources>
    <string name="app_name">Tip Assist</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="tip_total">Tip:</string>
    <string name="total_amount">Total:</string>
    <string name="enter_bill_amount">Bill Amount</string>
    <string name="_0">%0</string>
    <string name="round_up">Round Up</string>
    <string name="split_bill">Split Bill?</string>
    <string name="minusSign">-</string>
    <string name="plusSign">+</string>
    <string name="tip_assist_logo">Tip Assist Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bill">Bill:</string>
    <string name="appearance">Appearance</string>
    <string name="currency">Currency</string>
    <string name="test_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="prod_ad_id">ca-app-pub-8481302769357239~2136091679</string>
    <string name="test_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_id">ca-app-pub-8481302769357239/9040373389</string>
</resources>
