<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bill_amount"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="%0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBase"
        app:layout_constraintTop_toBottomOf="@+id/tvBase" />

    <TextView
        android:id="@+id/tvTipTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip_total"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTipPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercent" />

    <TextView
        android:id="@+id/tvTotalAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTipTotal"
        app:layout_constraintTop_toBottomOf="@+id/tvTipTotal" />

    <EditText
        android:id="@+id/tvAmountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/enter_bill_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvBase"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/tipPercentBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:scrollbarSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercent"
        app:layout_constraintStart_toStartOf="@+id/tvAmountInput"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercent" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipTotal"
        app:layout_constraintStart_toStartOf="@+id/tipPercentBar"
        app:layout_constraintTop_toTopOf="@+id/tvTipTotal"
        tools:text="19.4" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmt"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTotalAmt"
        tools:text="20.00" />

</androidx.constraintlayout.widget.ConstraintLayout>