<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTipTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tip_total"
            android:textColor="@color/mid_light"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/tipPercentBar"
            app:layout_constraintTop_toTopOf="@+id/tvTipPercent" />

        <TextView
            android:id="@+id/tvTipPercent"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/mid_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipPercentBar" />

        <TextView
            android:id="@+id/tvTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/mid_light"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTipTotal"
            app:layout_constraintEnd_toEndOf="@+id/tipPercentBar"
            app:layout_constraintTop_toTopOf="@+id/tvTipTotal"
            tools:text="19.4" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/mid_dark"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmt"
            app:layout_constraintEnd_toEndOf="@+id/tvTipAmount"
            app:layout_constraintTop_toTopOf="@+id/tvTotalAmt"
            tools:text="20.00" />

        <TextView
            android:id="@+id/tvTotalAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/total_amount"
            android:textColor="@color/mid_dark"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/tvTipTotal"
            app:layout_constraintTop_toBottomOf="@+id/tvTipTotal" />

        <EditText
            android:id="@+id/etAmountInput"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mid_light"
            android:fontFamily="sans-serif-light"
            android:hint="@string/enter_bill_amount"
            android:importantForAccessibility="no"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textAlignment="center"
            android:textColor="@color/mid_light"
            android:textColorHint="@color/disabled"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="102dp"
            android:layout_height="66dp"
            android:layout_marginTop="96dp"
            android:backgroundTint="@color/mid_light"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@+id/etAmountInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <SeekBar
            android:id="@+id/tipPercentBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="321dp"
            android:layout_height="31dp"
            android:layout_marginTop="64dp"
            android:max="30"
            android:scrollbarSize="30dp"
            app:layout_constraintEnd_toEndOf="@+id/etAmountInput"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/etAmountInput" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:minHeight="48dp"
            android:paddingEnd="24dp"
            android:text="@string/split_bill"
            android:textColor="@color/darkest"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnRound"
            app:layout_constraintEnd_toEndOf="@+id/tvTotal"
            app:layout_constraintTop_toTopOf="@+id/btnRound"
            app:thumbTint="#E1E5E6"
            app:trackTint="@color/disabled"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:buttonTint="@color/darker"
            android:fontFamily="sans-serif-thin"
            android:minHeight="48dp"
            android:paddingStart="24dp"
            android:text="@string/round_up"
            android:textColor="@color/darkest"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvTotalAmt"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalAmt"
            app:thumbTint="#E1E5E6"
            app:trackTint="@color/disabled"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnAddParty"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/enabled"
            android:text="@string/plusSign"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvPartySize"
            app:layout_constraintStart_toEndOf="@+id/tvPartySize"
            app:layout_constraintTop_toTopOf="@+id/tvPartySize"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDecParty"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/enabled"
            android:text="@string/minusSign"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPartySize"
            app:layout_constraintEnd_toStartOf="@+id/tvPartySize"
            app:layout_constraintTop_toTopOf="@+id/tvPartySize"
            app:layout_constraintVertical_bias="0.526"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvPartySize"
            android:layout_width="35dp"
            android:layout_height="29dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"
            android:outlineProvider="bounds"
            android:textAlignment="center"
            android:textColor="@color/enabledtext"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnSplit"
            app:layout_constraintStart_toStartOf="@+id/btnSplit"
            app:layout_constraintTop_toBottomOf="@+id/btnSplit"
            tools:ignore="TextContrastCheck"
            tools:text="10" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupSlitUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvPartySize, btnAddParty, btnDecParty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>